@@ -1,4 +1,3 @@
 -split up Forest
 -split up Fire
 -split up Water
--split up GTG
